--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             class="fab fa-linkedin-in" id="linkedin"></i>LinkedIn</a> </li>
       <li class="contactnewelement btn contact-details"> <a href="https://drive.google.com/file/d/1FfnhqidhQmzoDbVB2E-t8go4CX6zAVSv/view" target="_blank"><i
             class="fas fa-file" id="cv"></i><p>Curriculum Vitae</p></a> </li>
-      <li class="contactnewelement btn contact-details"> <a href="https://github.com/FedericoSavastano" target="_blank"><i class="fab fa-github" id="github"></i>GitHub</a>
+      <li class="contactnewelement btn contact-details"> <a href="https://github.com/FedericoSavastano" target="_blank" id="profile-link"><i class="fab fa-github" id="github"></i>GitHub</a>
       </li>
       <li class="contactnewelement btn contact-details"> <a href="mailto:f.savastano@hotmail.com" target="_blank"><i class="far fa-envelope" id="mail"></i> Mail</a> </li>
     </ul>
@@ -404,5 +404,6 @@
   </body>
 
   <script src="./js/app.js"></script>
-
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</body>
 </html>
