--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   
   <header>
     <nav id="navbar" class="nav">
+       <a href="./index.html#contactnewsection"><p class="lang link-nav" key="contacto">Contacto</p></a>
       <div id="logowrap">
       <a id="logo" href="./index.html" target="_self" class="btn logo-details"><i class="fas fa-robot"></i>
         <p>FEDERICO SAVASTANO . COM</p>
