--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   
   <header>
     <nav id="navbar" class="nav">
-       <a href="./index.html#contactnewsection"><p class="lang link-nav" key="contacto">Contacto</p></a>
+ 
       <div id="logowrap">
       <a id="logo" href="./index.html" target="_self" class="btn logo-details"><i class="fas fa-robot"></i>
         <p>FEDERICO SAVASTANO . COM</p>
@@ -104,7 +104,13 @@
 <li>
   <a href="./index.html" class="link-nav" >Home</a>
 </li>
-
+<li>
+  <a href="#welcome-section" class="link-nav" >Welcome</a>
+</li><li>
+  <a href="#projects" class="link-nav" >Projects</a>
+</li><li>
+  <a href="#contactnewsect" class="link-nav" >Contact</a>
+</li>
 
 
       <li class="dropdown">
